Addressed deprecation warnings for the Long constructor.